fix: remove overflow hack

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -3,7 +3,6 @@
 @import 'include-media';
 
 body {
-	overflow-x: hidden;
 	color: $text-color;
 	margin: 0;
 	font-family: 'Roboto', sans-serif;
